added gh-pages dep

--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "i": "^0.3.7",
-    "npm": "^8.10.0",
+    "npm": "^9.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-minimal-pie-chart": "^5.0.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
