--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instructor_411_wk5_day1_mapstatetoprops",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dkyoungone.github.io/411_wk6_day1_redux_thunk",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
